2008-04-06  Bruno coudoin  <bruno.coudoin@free.fr>

	Added support for Persan by Ehsan Nouri
	(commit trunk 3352)

	* configure.in: +added missing ur (Urdu) locale
	* src/gcompris/config.c:
	* po/fa.po:
	* po/ChangeLog:


2008-03-15  Bruno coudoin  <bruno.coudoin@free.fr>

	Merged from trunk r3309.
	- It is now possible to add activity introduction voices.
	  If provided, it will be played when the activity starts and when
	  it's help is requested.
	  To provide an activity intro, you must put it under:
	  boards/voices/<locale>/activity/<activity name>-intro.ogg

	* src/boards/erase.c: (start_board), (end_board),
	(erase_one_item): moved the audio mode PLAY_AND_INTERRUPT only on
	the last item to avoid an intro voice to be cut.
	* src/gcompris/about.c: (gc_about_start): copyright is 2008 now.
	* src/gcompris/board.c: (gc_board_play): added support to play an
	optional intro voice a the start of an activity
	* src/gcompris/help.c: (gc_board_play): added support to play an
	optional intro voice when the help is lanched.
	* src/gcompris/bonus.c: (gc_bonus_display), (bonus_image):
	cleanup, removed extra warnings.
	* src/gcompris/gcompris.c: (cleanup), (single_instance_release),
	(single_instance_check): fixed the release of the lock when GC is exited.
	* src/gcompris/gameutil.c: (gc_activity_intro_play) created this function

	*** RELEASE 8.3.5 ***

2008-02-13  Bruno coudoin  <bruno.coudoin@free.fr>

	boards/sounds/<locale>: removed to point to the new common
	svn version instead. Now make update-voices is used to put
	them in the current working directory. It must be updated
	before a make dist.

	Merge of trunk 3242
	Windows issue. Translation was broken in all python modules.
	Now use the gcompris gettext instead of the python one.

	* README.mingw:
	* src/boards/python/admin/board_list.py:
	* src/boards/python/admin/class_edit.py:
	* src/boards/python/admin/class_list.py:
	* src/boards/python/admin/group_edit.py:
	* src/boards/python/admin/group_list.py: